fix: Image in the table is blurred when enlarged

--- a/docs/.vitepress/vitepress/styles/base.scss
+++ b/docs/.vitepress/vitepress/styles/base.scss
@@ -236,6 +236,10 @@ li > ol {
     font-size: 14px;
     line-height: 1.5em;
 
+    img {
+      max-width: none !important;
+    }
+
     tr {
       td:nth-child(2) {
         font-family: var(--font-family);
